<resources>
    <string name="app_name">I Love Animals</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="post_ad_label">Duyuru Yap</string>
    <string name="title_label">Başlık</string>
    <string name="address_label">Address</string>
    <string name="description_label">Açıklama</string>
    <string name="post_label">Gönder</string>
    <string name="phone_number_label">Telefon</string>
    <string name="share_location_btn_label">Konumunu Paylaş</string>
    <string name="password_label">Şifre</string>
    <string name="email_label">Email</string>
    <string name="sign_up_label">Kayıt Ol</string>
    <string name="or_label">VEYA</string>
    <string name="forgot_password_label"><u>Şifremi unuttum!</u></string>
    <string name="login_label">Giriş Yap</string>
    <string name="icon_for_dog_label">Icon for Dog</string>
    <string name="have_an_account_label">Zaten bir hesabın var mı?</string>
    <string name="create_an_account_label">Hesap Oluştur!</string>
    <string name="first_name_label">Ad</string>
    <string name="last_name_label">Soyad</string>
    <string name="do_you_have_already_an_account">
        <u>Zaten bir hesabın var mı?</u>
    </string>
    <string name="log_out">Çıkış Yap</string>
    <string name="btn_completed_label">Tamamlandı</string>
    <string name="status_label">Beslenme Durumu</string>
    <string name="advertisement_info_label">Duyuru Bilgisi</string>
    <string name="home_label">Home</string>
    <string name="profile_label">Profile</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="not_completed">Bekleyenler</string>
    <string name="completed">Tamamlanan</string>
    <string name="post_new_ad">Yeni duyuru ekleme</string>
    <string name="sort">Sırala</string>
    <string name="filter">Filtre</string>
    <string name="date_descending">En yeniden eskiye</string>
    <string name="date_ascending">En eskiden yeniye</string>
    <string name="completed_ad">Tamamlanan Duyuru</string>
    <string name="change_my_password">Şifremi Değiştir</string>
    <string name="ad_count">Toplam Duyuru Sayısı</string>
    <string name="animal_icon">animal icon</string>
    <string name="settings_icon_for_ad">settings_icon_for_ad</string>
    <string name="btn_ok_label">Tamam</string>
    <string name="btn_cancel_label">Iptal</string>
    <string name="apply">Uygula</string>
    <string name="all">Hepsi</string>
    <string name="mine">Benim Duyurular</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="title_change_password">Şifre Değişikliği</string>

</resources>