<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".presentation.ad_list.FilterSheetFragment"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/bottom_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="match_parent"
            android:text="@string/all"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="match_parent"
            android:text="@string/mine"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        style="@style/Widget.Material3.Button.TextButton"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_label"
        style="@style/Widget.Material3.Button.TextButton"
        />
</LinearLayout>