<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:elevation="24dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_tv_title"
            style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_inverseOnSurface"
            android:padding="4dp"
            android:text="@string/sort" />

        <RadioGroup
            android:id="@+id/dialog_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_descending" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_ascending" />
        </RadioGroup>
    </LinearLayout>
</androidx.cardview.widget.CardView>